--- a/ipv6.html
+++ b/ipv6.html
@@ -3,165 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPv6 Address Compression Exercise</title>
+    <title>IPv6 Header Illustration</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            background-color: #ffffff;
+            color: #333;
             margin: 0;
-            background-color: #e0e0e0; /* Light grey background */
-        }
-
-        .container {
-            background-color: #ffffff; /* White background */
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); /* Shadow with black */
-            text-align: center;
-            width: 450px; /* Increased width by 2 inches (2 inches ≈ 50.8mm ≈ 200px) */
         }
-
         h1 {
-            font-size: 24px;
-            color: #333; /* Dark grey text */
+            text-align: center;
+            color: #d9534f;
+        }
+        .description-box {
+            background-color: #f8f9fa;
+            border: 2px solid #333;
+            padding: 15px;
+            border-radius: 5px;
             margin-bottom: 20px;
         }
-
-        #exercise {
-            margin-bottom: 20px;
-        }
-
-        #address {
-            font-weight: bold;
-            margin-bottom: 10px;
-            color: #d32f2f; /* Red text */
-            font-size: 18px;
-            background-color: #ffffff; /* White background */
-            padding: 10px;
-            border: 2px solid #d32f2f; /* Red border */
-            border-radius: 4px;
-        }
-
-        #answer {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        button {
-            padding: 10px 20px;
-            margin: 5px;
-            border: none;
-            background-color: #d32f2f; /* Red background */
-            color: #fff; /* White text */
-            cursor: pointer;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #b71c1c; /* Darker red on hover */
-        }
-
-        #feedback {
-            font-size: 16px;
-            margin-top: 10px;
-        }
-
-        #finalScore {
-            font-size: 18px;
-            font-weight: bold;
+        h2 {
+            color: #d9534f;
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
             margin-top: 20px;
         }
-
-        .correct {
-            color: #388e3c; /* Green text for correct answers */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
         }
-
-        .incorrect {
-            color: #d32f2f; /* Red text for incorrect answers */
+        th, td {
+            border: 1px solid #000;
+            padding: 12px;
+            text-align: left;
+            background-color: #ffffff;
+        }
+        th {
+            background-color: #333;
+            color: #ffffff;
+        }
+        tr:nth-child(even) td {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) td {
+            background-color: #ffffff;
+        }
+        a {
+            color: #d9534f;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .description {
+            margin-top: 20px;
+            background-color: #f8f9fa;
+            padding: 15px;
+            border: 2px solid #333;
+            border-radius: 5px;
+        }
+        .description a {
+            color: #d9534f;
+            text-decoration: none;
+        }
+        .description a:hover {
+            text-decoration: underline;
         }
     </style>
+    <script>
+        function showDescription(id) {
+            const descriptions = document.querySelectorAll('.description');
+            descriptions.forEach(description => {
+                description.style.display = 'none';
+            });
+            document.getElementById(id).style.display = 'block';
+        }
+    </script>
 </head>
 <body>
-    <div class="container">
-        <h1>IPv6 Address Compression Exercise</h1>
-        <div id="exercise">
-            <p id="address"></p>
-            <input type="text" id="answer" placeholder="Enter compressed IPv6 address">
-            <button onclick="submitAnswer()">Submit</button>
-            <p id="feedback"></p>
-        </div>
-        <button onclick="nextAddress()">Next</button>
-        <button onclick="endExercise()">End</button>
-        <p id="finalScore"></p>
-    </div>
-    <script>
-        const addresses = [
-            "2001:0db8:0000:0000:0000:ff00:0042:8329",
-            "2001:0db8:0000:0042:0000:0000:0000:1234",
-            "fe80:0000:0000:0000:0202:b3ff:fe1e:8329",
-            "0000:0000:0000:0000:0000:0000:0000:0001",
-            "2001:0db8:0000:0000:0008:0800:200c:417a",
-            // Add more addresses as needed
-        ];
 
-        const correctCompressedAddresses = [
-            "2001:db8::ff00:42:8329",
-            "2001:db8:0:42::1234",
-            "fe80::202:b3ff:fe1e:8329",
-            "::1",
-            "2001:db8::8:800:200c:417a",
-            // Add corresponding compressed addresses
-        ];
+<h1>IPv6 Header Illustration</h1>
 
-        let currentAddressIndex = -1;
-        let score = 0;
-        let attempts = 0;
+<div class="description-box">
+    <p>Internet Protocol version 6 (IPv6) is the most recent version of the Internet Protocol (IP), the communications protocol that provides an identification and location system for computers on networks and routes traffic across the Internet. IPv6 was developed to deal with the long-anticipated problem of IPv4 address exhaustion.</p>
+</div>
 
-        function getRandomAddress() {
-            const randomIndex = Math.floor(Math.random() * addresses.length);
-            currentAddressIndex = randomIndex;
-            document.getElementById('address').innerText = addresses[randomIndex];
-            document.getElementById('answer').value = '';
-            document.getElementById('feedback').innerText = '';
-        }
+<h2>IPv6 Header Fields</h2>
+<table>
+    <tr>
+        <th colspan="4"><a onclick="showDescription('desc-version')">Version</a> (4 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-trafficclass')">Traffic Class</a> (8 bits)</th>
+        <th colspan="20"><a onclick="showDescription('desc-flowlabel')">Flow Label</a> (20 bits)</th>
+    </tr>
+    <tr>
+        <th colspan="16"><a onclick="showDescription('desc-payloadlength')">Payload Length</a> (16 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-nextheader')">Next Header</a> (8 bits)</th>
+        <th colspan="8"><a onclick="showDescription('desc-hoplimit')">Hop Limit</a> (8 bits)</th>
+    </tr>
+    <tr>
+        <th colspan="64"><a onclick="showDescription('desc-sourceaddress')">Source Address</a> (128 bits)</th>
+    </tr>
+    <tr>
+        <th colspan="64"><a onclick="showDescription('desc-destinationaddress')">Destination Address</a> (128 bits)</th>
+    </tr>
+</table>
 
-        function submitAnswer() {
-            const userAnswer = document.getElementById('answer').value.trim();
-            const correctAnswer = correctCompressedAddresses[currentAddressIndex];
-            if (userAnswer === correctAnswer) {
-                document.getElementById('feedback').innerText = 'Correct!';
-                document.getElementById('feedback').className = 'correct';
-                score++;
-            } else {
-                document.getElementById('feedback').innerText = `Incorrect! The correct answer is: ${correctAnswer}`;
-                document.getElementById('feedback').className = 'incorrect';
-            }
-            attempts++;
-        }
+<div class="description" id="desc-version">
+    <h2>Version (4 bits)</h2>
+    <p>Indicates the version of the IP. For IPv6, this value is 6. <a href="#desc-version">Back to header</a></p>
+</div>
+<div class="description" id="desc-trafficclass">
+    <h2>Traffic Class (8 bits)</h2>
+    <p>Used to distinguish between different classes or priorities of IPv6 packets. <a href="#desc-trafficclass">Back to header</a></p>
+</div>
+<div class="description" id="desc-flowlabel">
+    <h2>Flow Label (20 bits)</h2>
+    <p>Used by a source to label sequences of packets for which it requests special handling by the IPv6 routers. <a href="#desc-flowlabel">Back to header</a></p>
+</div>
+<div class="description" id="desc-payloadlength">
+    <h2>Payload Length (16 bits)</h2>
+    <p>Indicates the length of the payload, i.e., the rest of the packet following the IPv6 header, in octets. <a href="#desc-payloadlength">Back to header</a></p>
+</div>
+<div class="description" id="desc-nextheader">
+    <h2>Next Header (8 bits)</h2>
+    <p>Identifies the type of header immediately following the IPv6 header. <a href="#desc-nextheader">Back to header</a></p>
+</div>
+<div class="description" id="desc-hoplimit">
+    <h2>Hop Limit (8 bits)</h2>
+    <p>Indicates the maximum number of hops a packet is allowed before being discarded. <a href="#desc-hoplimit">Back to header</a></p>
+</div>
+<div class="description" id="desc-sourceaddress">
+    <h2>Source Address (128 bits)</h2>
+    <p>Specifies the IPv6 address of the originator of the packet. <a href="#desc-sourceaddress">Back to header</a></p>
+</div>
+<div class="description" id="desc-destinationaddress">
+    <h2>Destination Address (128 bits)</h2>
+    <p>Specifies the IPv6 address of the intended recipient of the packet. <a href="#desc-destinationaddress">Back to header</a></p>
+</div>
 
-        function nextAddress() {
-            if (currentAddressIndex >= 0) {
-                getRandomAddress();
-            }
-        }
-
-        function endExercise() {
-            document.getElementById('finalScore').innerText = `Your final score is: ${score}/${attempts}`;
-            document.getElementById('exercise').style.display = 'none';
-            document.getElementById('address').style.display = 'none';
-            document.querySelector('button[onclick="submitAnswer()"]').style.display = 'none';
-            document.querySelector('button[onclick="nextAddress()"]').style.display = 'none';
-        }
-
-        window.onload = getRandomAddress;
-    </script>
 </body>
 </html>
