--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <li><a href="binary.html"> Binary Game</a></li>
             <li><a href="caesar.html"> Caesar Cipher Tool</a></li>
             <li><a href="cve.html"> CVE Database Search</a></li>
+            <li><a href="dora.html"> DHCP Simulation Tool</a></li>
             <li><a href="diffie.html"> Diffie-Hellman Key Exchange Color Simulation</a></li>
             <li><a href="firewall.html"> Stateful Firewall Simulator</a></li>
             <li><a href="flashcard.html"> Flashcards</a></li>
