--- a/beam.html
+++ b/beam.html
@@ -1,141 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beam Search Algorithm Demo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f9;
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beam Search Algorithm Demo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f4f4f9;
+        }
 
-        .container {
-            text-align: center;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+        .container {
+            text-align: center;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            width: 80%;
+            max-width: 600px;
+        }
 
-        textarea, input {
-            width: 80%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
+        h1 {
+            color: red;
+        }
 
-        button {
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
+        textarea, input {
+            width: 80%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
 
-        button:hover {
-            background-color: #0056b3;
-        }
+        textarea {
+            background-color: #f9f9f9;
+        }
 
-        #output {
-            margin-top: 20px;
-            text-align: left;
-        }
+        input {
+            background-color: #ffffff;
+        }
 
-        .tree {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+        button {
+            padding: 10px 20px;
+            background-color: red;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
 
-        .level {
-            display: flex;
-            justify-content: center;
-            margin: 10px 0;
-        }
+        button:hover {
+            background-color: black;
+        }
 
-        .node {
-            padding: 5px 10px;
-            margin: 0 5px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            background-color: #f9f9f9;
-        }
-    </style>
+        #output {
+            margin-top: 20px;
+            text-align: left;
+        }
+
+        .tree {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .level {
+            display: flex;
+            justify-content: center;
+            margin: 10px 0;
+            width: 100%;
+            border-top: 1px solid #ccc;
+            padding-top: 10px;
+        }
+
+        .level strong {
+            margin-right: 10px;
+            color: red;
+        }
+
+        .node {
+            padding: 5px 10px;
+            margin: 0 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-color: #f9f9f9;
+            color: black;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Beam Search Algorithm Demo</h1>
-        <textarea id="inputText" placeholder="Enter words or sentences"></textarea>
-        <input type="number" id="beamWidth" placeholder="Enter Beam Width" min="1" value="3">
-        <button onclick="runBeamSearch()">Run Beam Search</button>
-        <div id="output"></div>
-    </div>
-    <script>
-        function runBeamSearch() {
-            const inputText = document.getElementById('inputText').value;
-            const beamWidth = parseInt(document.getElementById('beamWidth').value);
-            if (!inputText || beamWidth < 1) {
-                alert('Please enter valid input and beam width.');
-                return;
-            }
+    <div class="container">
+        <h1>Beam Search Algorithm Demo</h1>
+        <textarea id="inputText" placeholder="Enter words or sentences"></textarea>
+        <input type="number" id="beamWidth" placeholder="Enter Beam Width" min="1" value="3">
+        <button onclick="runBeamSearch()">Run Beam Search</button>
+        <div id="output"></div>
+    </div>
+    <script>
+        function runBeamSearch() {
+            const inputText = document.getElementById('inputText').value;
+            const beamWidth = parseInt(document.getElementById('beamWidth').value);
+            if (!inputText || beamWidth < 1) {
+                alert('Please enter valid input and beam width.');
+                return;
+            }
 
-            const sequences = beamSearch(inputText.split(' '), beamWidth);
-            displayResults(sequences);
-        }
+            const sequences = beamSearch(inputText.split(' '), beamWidth);
+            displayResults(sequences);
+        }
 
-        function beamSearch(words, beamWidth) {
-            let sequences = [['', 0]];
-            let allLevels = [];
+        function beamSearch(words, beamWidth) {
+            let sequences = [['', 0]];
+            let allLevels = [];
 
-            for (const word of words) {
-                let allCandidates = [];
-                for (const [seq, score] of sequences) {
-                    const nextSeq = seq + ' ' + word;
-                    const nextScore = score + Math.random(); // Dummy score calculation
-                    allCandidates.push([nextSeq.trim(), nextScore]);
-                }
+            for (const word of words) {
+                let allCandidates = [];
+                for (const [seq, score] of sequences) {
+                    const nextSeq = seq + ' ' + word;
+                    const nextScore = score + Math.random(); // Dummy score calculation
+                    allCandidates.push([nextSeq.trim(), nextScore]);
+                }
 
-                // Sort all candidates by score in descending order and select the top beamWidth candidates
-                allCandidates.sort((a, b) => b[1] - a[1]);
-                sequences = allCandidates.slice(0, beamWidth);
-                allLevels.push([...sequences]);
-            }
+                // Sort all candidates by score in descending order and select the top beamWidth candidates
+                allCandidates.sort((a, b) => b[1] - a[1]);
+                sequences = allCandidates.slice(0, beamWidth);
+                allLevels.push([...sequences]);
+            }
 
-            return allLevels;
-        }
+            return allLevels;
+        }
 
-        function displayResults(allLevels) {
-            const outputDiv = document.getElementById('output');
-            outputDiv.innerHTML = '<h3>Beam Search Results:</h3>';
+        function displayResults(allLevels) {
+            const outputDiv = document.getElementById('output');
+            outputDiv.innerHTML = '<h3>Beam Search Results:</h3>';
 
-            const treeDiv = document.createElement('div');
-            treeDiv.className = 'tree';
+            const treeDiv = document.createElement('div');
+            treeDiv.className = 'tree';
 
-            allLevels.forEach((level, index) => {
-                const levelDiv = document.createElement('div');
-                levelDiv.className = 'level';
-                levelDiv.innerHTML = `<strong>Level ${index + 1}:</strong>`;
+            allLevels.forEach((level, index) => {
+                const levelDiv = document.createElement('div');
+                levelDiv.className = 'level';
+                levelDiv.innerHTML = `<strong>Level ${index + 1}:</strong>`;
 
-                level.forEach(([seq, score]) => {
-                    const nodeDiv = document.createElement('div');
-                    nodeDiv.className = 'node';
-                    nodeDiv.innerHTML = `${seq} (Score: ${score.toFixed(2)})`;
-                    levelDiv.appendChild(nodeDiv);
-                });
+                level.forEach(([seq, score]) => {
+                    const nodeDiv = document.createElement('div');
+                    nodeDiv.className = 'node';
+                    nodeDiv.innerHTML = `${seq} (Score: ${score.toFixed(2)})`;
+                    levelDiv.appendChild(nodeDiv);
+                });
 
-                treeDiv.appendChild(levelDiv);
-            });
+                treeDiv.appendChild(levelDiv);
+            });
 
-            outputDiv.appendChild(treeDiv);
-        }
-    </script>
+            outputDiv.appendChild(treeDiv);
+        }
+    </script>
 </body>
 </html>
